# aws-iot-mqtt-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
src/: format.rs  main.rs
