[package]
name = "aws-iot-mqtt-cli"
description = "MQTT CLI for AWS IoT"
keywords = ["cli", "mqtt", "aws-iot"]
authors = ["Deep Panchal <deep302001@gmail.com>"]
version = "0.2.0"
edition = "2021"
documentation = "https://docs.rs/aws-iot-mqtt-cli"
homepage = "https://github.com/deepanchal/aws-iot-mqtt-cli"
repository = "https://github.com/deepanchal/aws-iot-mqtt-cli"
license = "MIT"

[dependencies]
aws-iot-device-sdk-rust = "0.6.0"
rumqttc = "0.24.0"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive", "env"] }
colored = "3.0.0"
regex = "1.11.1"
serde_json = "1.0.140"
term_size = "0.3.2"
tokio = { version = "1.44.0", features = ["full"] }
env_logger = "0.11.6"
log = "0.4.26"
